Fix AI analysis timeout issue and setup complete development environment
 Fixed critical AI analysis timeout bug:
- Removed Express req.setTimeout() that was blocking concurrent requests
- Added OpenAI client timeout (60s) for better error handling
- Fixed 'Text strings must be rendered within <Text> component' React Native error
- Improved confidence value validation in MealConfirmation component

 Complete AI configuration setup:
- Added .cursorrules with comprehensive development guidelines
- Created automated SSH scripts for backend deployment
- Setup icon structure and configuration for Android/iOS
- Added documentation for quick start and deployment

 Development workflow improvements:
- Frontend: Local Expo development connecting to production API
- Backend: Local development with file upload instructions for production
- AI analysis now works reliably for multiple consecutive requests
- Enhanced error handling and fallback mechanisms

 App functionality restored:
- AI food analysis working correctly
- Multiple language support (en, es, pl, ru, uk)
- Nutrition data display with proper validation
- Camera integration and meal tracking operational

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -16,14 +16,18 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.snapcal.app",
-      "icon": "./assets/images/icon.png"
+      "icon": "./assets/images/icon.png",
+      "infoPlist": {
+        "CFBundleIconName": "AppIcon"
+      }
     },
     "android": {
       "package": "com.snapcal.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#14B8A6"
-      }
+      },
+      "icon": "./assets/images/icon.png"
     },
     "web": {
       "bundler": "metro",
