--- a/frontend/app.production.json
+++ b/frontend/app.production.json
@@ -16,14 +16,20 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.snapcal.app",
-      "icon": "./assets/images/icon.png"
+      "icon": "./assets/images/icon.png",
+      "infoPlist": {
+        "CFBundleIconName": "AppIcon"
+      },
+      "buildNumber": "1"
     },
     "android": {
       "package": "com.snapcal.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#14B8A6"
-      }
+      },
+      "icon": "./assets/images/icon.png",
+      "versionCode": 1
     },
     "web": {
       "bundler": "metro",
@@ -44,4 +50,4 @@
       "ENV": "production"
     }
   }
-} 
+}
